static/css/style.css
/* ... */
.header {
    min-height: 60px;
    padding: 0 10px;
}
.header {
    position: fixed;
    left: 0;
    right: 0;
    z-index: 1002;
    text-align:center;
}


.black-bg {
    background: rgba(10,10,10,0.9);
    border-bottom: 3px solid rgba(20, 20, 20, 0.7);
}

.wrapper {
    display: inline-block;
    margin-top: 60px;
    padding: 20px 0px 15px 0px;
    width: 100%;
}

a.logo {
    font-size: 22px;
    font-weight: 300;
    color: #8E8E93;
    float: left;
    margin-top: 10px;
    text-transform: uppercase;
}

a.logo:hover, a.logo:focus {
    text-decoration: none;
    outline: none;
}

h1.top-menu {
    margin-top: -5px;
}
.title-row {
    margin-top: 15px;
    margin-left: 16px;
    color: #EEE;
}
.notification-row {
    float: right;
    margin-top: 15px;
    margin-left: 65px;
}


.top-nav  {
    margin-top: 15px;
}

/* Sidebar Toggle */

.toggle-nav {
    float: left;
    padding-right: 5px;
    margin-top: 20px;
    cursor: pointer;
    color: gray;
}

.toggle-nav .icon-reorder {
    cursor: pointer;
    display: inline-block;
    font-size: 20px;
}


@-webkit-keyframes square {
  0% { background-position: 0 0; }
  25% { background-position: 100% 0; }
  50% { background-position: 100% 100%; }
  75% { background-position: 0 100%; }
  100% { background-position: 0 0; }
}

@-ms-keyframes square {
  0% { background-position: 0 0; }
  25% { background-position: 100% 0; }
  50% { background-position: 100% 100%; }
  75% { background-position: 0 100%; }
  100% { background-position: 0 0; }
}

@keyframes square {
  0% { background-position: 0 0; }
  25% { background-position: 100% 0; }
  50% { background-position: 100% 100%; }
  75% { background-position: 0 100%; }
  100% { background-position: 0 0; }
}

.navigation {
    position: absolute;
    top: 0;
    bottom: 0;
    margin: 0;
    max-width: 150px;
    min-width: 90px;
    width:100%;
    min-height:1200px;
    cursor:pointer;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    font-size: 6em;
    color: rgba(0,0,0,0.5);
    text-align: center;
    -webkit-transition: all 350ms ease;
    transition: all 350ms ease;
}

.navigation.next {
    right:0;
}


.navigation:hover {
    background-color: rgba(0,0,0,0.1);
}

.wrapper {
   padding-right: 0px;
}

/* Thumbnail */
.thumbnail-container-parent{
    padding-bottom:1em;
}

.thumbnail-container{
    width: 100%;
    padding-bottom: 75%;
    position: relative;
}
.thumbnail {
    position: absolute;
    top: 0; bottom: 0; left: 0; right: 0;
    border: 1px solid #eee;
}
.thumbnail img.img-responsive{
    width: 100%;
    height: auto;
    display: block;
}

.thumbnail .thumbnail-meta {
    position: absolute;
    width: 100%;
    height: 48px;
    line-height: 45px;
    left: 0px;
    bottom: 0px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding:0px 10px;
    background: rgba(255, 255, 255, 0.9);
    border-top: 3px rgba(220, 220, 220, 0.08) solid;
    transition: all .2s linear;
    cursor: pointer;
}

.thumbnail .thumbnail-meta h4 {
    margin-top: 0px;
    margin-bottom: 0px;
    line-height: 45px;
}
.thumbnail .thumbnail-meta h4 a {
    line-height: 45px;
    text-decoration: none !important;

}

.thumbnail:hover .thumbnail-meta {
    background: rgba(255, 64, 136, 0.9);
    height: 55px;
}

.thumbnail:hover .thumbnail-meta h4 a {
    color: #FFFFFF;
}

.thumbnail .thumbnail-meta .license {
    font-size: 14px;
    font-weight: bold;
    opacity: 0.7;
    max-width: 55px;
    overflow: hidden;
    text-transform: uppercase;
}

.thumbnail:hover .thumbnail-meta .license {
    opacity: 0.0;
}

.thumbnail h4 a {
    text-transform: uppercase;
    font-size: 15px;
    font-weight: bold;
    line-height: 100%;
}

/* Contribute */
.contribute {
    border-top:1px #efefef solid;
    line-height: 30px;
    padding: 25px 0px 15px;
    position: relative;
    background: #f9f9f9;
}

.contribute i {
    display: inline-block;
    float: left;
    line-height: 80px;
    height: 100%;
    font-size: 30px;
    padding:0px 25px;
    position: absolute;
    left:0px;
    top:0px;
}

.contribute p {
    padding-left: 80px;
    padding-right: 10px;
}


/* Single */
.btn-block {
  display: block;
  width: 100%;
}
.back-link{
    margin-bottom: 15px;
}
#theme-header {
    overflow: hidden;
    margin:-20px;
    height: 410px;
    position: relative;
    border: 1px #ccc solid;
}

#theme-header img.screenshot-blurred {
    position: absolute;
    width: 115%;
    height: auto;
    left:0px;
    top:0px;
    opacity: 0.4;
    filter: blur(10px);
    -webkit-filter: blur(10px);
    -moz-filter: blur(10px);
    -o-filter: blur(10px);
    -ms-filter: blur(10px);
    /* Cross Browser Compatibility */
    filter: url(blur.svg#blur);
    filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');
    z-index: 15;
}

#theme-header .screenshot-container {
    padding: 40px 30px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#theme-header img.screenshot-normal {
    width: 100%;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

#theme-header div.dark-overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 20;
    background: rgba(6, 148, 203, 0.3);
    /*background: rgba(10, 10, 10, 0.1);*/
}

#theme-header .row {
    position: relative;
    margin-left: 5px;
    margin-right: 5px;
    z-index: 40;
    height: 100%;
}

#theme-header .row .col-md-6 {
    float: right;
}

#theme-header .theme-details {
    margin-top: 35px;
    padding-left: 25px;
}

#theme-header .theme-details h1 {
    font-size: 40px;
    line-height: 50px;
    margin: 0;
    color: #232323;
}

#theme-header .theme-details .description {
    color: #232323;
}

#theme-header .theme-details ul.theme-meta {
    list-style-type: none;
    margin: 10px 0px 0px 0px;
    padding: 0;
}
/* ... */

